[package]
name = "dom_reg"
version = "0.1.0"
authors = ["melbadry9 <me@melbadry9.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
threadpool = "1.8.1"
serde_json = "1.0.59"
reqwest = { version = "0.11.3", features = ["blocking", "json", "gzip"] }

#serde = { version = "1.0.126", features = ["derive"] }
#serde_derive = "1.0.126"